src/local_logger/rolling_buffer/snapshots/codspeed_runner__local_logger__rolling_buffer__tests__render_empty.snap
---
source: src/local_logger/rolling_buffer/tests.rs
expression: render_stripped(&rb)
---
     Running benchmarks
    ╭──────────────────────────────────────────────────────╮
    ╰──────────────────────────────────────────────────────╯
