src/local_logger/rolling_buffer/snapshots/codspeed_runner__local_logger__rolling_buffer__tests__render_few_lines.snap
---
source: src/local_logger/rolling_buffer/tests.rs
expression: render_stripped(&rb)
---
     Running benchmarks
    ╭──────────────────────────────────────────────────────╮
    │ line 1                                               │
    │ line 2                                               │
    │ line 3                                               │
    ╰──────────────────────────────────────────────────────╯
